--- a/src/CSS_Files/style.scss
+++ b/src/CSS_Files/style.scss
@@ -42,7 +42,7 @@ html {
           width: 98%;
 
           .left-part {
-            width: 16.7%;
+            width: 14.5rem;
             height: 100dvh - 10.3dvh;
             float: left;
             padding-top: 1.5rem;
